--- a/styles/style.css
+++ b/styles/style.css
@@ -33,6 +33,7 @@ h1 {
   font-size: 90px; 
   color: #EAE4D1; 
   line-height: 85px; 
+  text-align: center;
 }
 
 h2 {
@@ -53,21 +54,30 @@ h4 {
   font-family: 'Hepta Slab', serif;
   font-size: 20px; 
   color:#EAE4D1; 
-  line-height: 30px;}
+  line-height: 30px;
+  text-align: center;
+}
 
 
   h5 {
     font-family: 'Hepta Slab', serif;
     font-size: 35px; 
     color:#EAE4D1; 
-    line-height: 50px;}
+    line-height: 50px;
+  
+}
  
-
+.main{
+ display:flex;
+ align-items: center;
+}
 p {
   font-family: 'Montserrat', sans-serif; 
   font-size: 18 px; 
   color: #EAE4D1; 
-  line-height: 30px;}
+  line-height: 30px;
+  text-align: center;
+}
 
   ul li {
     font-family: 'Montserrat', sans-serif; 
@@ -93,7 +103,56 @@ p {
     background-color:511E79; 
   }
 
-
+  .btn{
+    width:200px;
+    height:42px;
+    border-style: none;
+   background-color: #7d6fd7;
+     color:#EAE4D1;
+     font-family: 'Montserrat', sans-serif; 
+     font-size: 13px;
+     font-weight:700;
+     border-radius:15px;
+   }
+   
+   .optionbtn{
+      
+     background-color:transparent;
+     border: 1px solid #7d6fd7;
+      font-family: 'Montserrat', sans-serif; 
+      font-size: 15px;
+      color:#7d6fd7;
+      font-weight:700;
+      border-radius:15px;
+      outline-offset: 5px;
+   
+   }
+.spacer {
+  height:50px;
+}
+ 
+   .forkbtn{
+  background-color:transparent;
+    border: 1px solid #7d6fd7;
+     font-family: 'Montserrat', sans-serif; 
+     font-size: 30px;
+     height: 50px;
+     color:#7d6fd7;
+     font-weight:700;
+     border-radius:15px;
+     outline-offset: 20px;  
+  }
+  .forkbtn:hover {
+    background-color:#7d6fd7;
+    color:#EAE4D1;
+    transition: 0.7s;
+}
+.flashback {
+  
+  height:500px;
+  width: 800px;
+  background-color:#40293B;
+}
    
   
 /* BACKGROUNDS */
@@ -119,7 +178,7 @@ p {
   border-top: 1px solid #7d6fd7;
 }
 
-
+.
 
 
 /* ALIGNMENT + PLACEMENT */
@@ -167,6 +226,7 @@ p {
   padding-top: 50px;
   padding-left: 50px; 
   padding-bottom:50px;
+  padding-right: 50px;
 }
 
 .sectionbanner {
@@ -203,11 +263,15 @@ p {
 /* LINKS */
 
 a:link {
-  color: #EAE4D1; 
+  color:#7d6fd7;
   text-decoration:none; }
 
 a:hover {
-color:#7d6fd7;
+color:#EAE4D1;
+ }
+
+ a:visited {
+  color:#7d6fd7;
  }
 
 
@@ -257,6 +321,9 @@ color:#7d6fd7;
   top: 50%; 
   left: 50%; 
   transform: translate(-50%, -50%); 
+  display:flex;
+  justify-content: center;
+  
   
 }
  
@@ -302,6 +369,28 @@ overflow-x: hidden;
 overflow-y: auto;
 }
 
+.letter{
+  border: 1px solid #7d6fd7;
+  width: 100%;
+  height: 700px;
+  display:flex;
+  flex-wrap: wrap;
+  padding:20px;
+  text-align:center;
+  overflow-x: hidden;
+  overflow-y: auto;
+  }
+.purpleborder2{
+  border: 1px solid #7d6fd7;
+  display:flex;
+  flex-wrap: wrap;
+  padding:20px;
+  text-align:center;
+ height: 500px;
+ position: absolute;
+ top:500px;
+ left: 60%;
+  }
 .purpletext {
   background-color:#40293B;
   width: 50%;
@@ -339,6 +428,9 @@ flex-wrap: wrap;}
   background-color: #7d6fd7;
 }
 
+.orange {
+  background-color: #FF7E20;
+}
 .cream {
   width:100%;
   height: 300px;
